friend requests fonctional, accept or deny friend requests

--- a/chat-frontend/src/view/pages/chat/chat.css
+++ b/chat-frontend/src/view/pages/chat/chat.css
@@ -1,3 +1,19 @@
+.ChatFriendRequest{
+    display: flex;
+}
+
+.ChatSide{
+    background-color: green;
+}
+
+.FriendRequestSide{
+    background-color: blueviolet;
+}
+
+.FriendsSide{
+    background-color: rgb(202, 111, 0);
+}
+
 .Chatinterface{
     border: white 1px solid;
     height: 300px;
