--- a/chat-frontend/src/view/pages/login/login.css
+++ b/chat-frontend/src/view/pages/login/login.css
@@ -1,3 +1,56 @@
+#root{
+    width: 100%;
+}
+
+
+.loginSignupParent{
+    background: #ff88c546 ;
+    padding: 5%;
+    margin: 5%;
+    border-radius: 20px;
+}
+.loginSignupParent h1{
+    text-align: center;
+}
+
+
+.loginSignupEnfant{
+    display: flex;
+    margin: auto;
+    align-items: center;
+    justify-content: space-around;
+}
+.loginSignupEnfant h1{
+    text-align: center
+}
+.loginSignupEnfant h2{
+    text-align: center
+}
+
+
+.signup{
+    width: 45%;
+}
+.signup form{
+    display: flex;
+    flex-direction: column;
+}
+.signup input{
+    width: 100%;
+}
+.submitButton{
+    margin-top: 30px;
+}
+
+
 .login{
-    background-color: red;
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+}
+.login input{
+    width: 100%;
+}
+.submitButton{
+    margin-top: 30px;
 }
